[package]
name = "car_minimap"
version = "0.1.0"
edition = "2024"

[dependencies]
show-image = "0.14.1"
gpsd = "0.1.2"
image = "0.25.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serialport = { version = "4.7.2", default-features = false }  # Disable udev
nmea = "0.7.0"
tracing = { version = "0.1", default-features = false }

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
